added deletion functions for object records and sessions
