# internal/handler/handler.go
@@ -28,14 +28,19 @@ func InitHandler() *gin.Engine {
 		}
 
 		api.Use(authorization.AuthorizationRequired)
+		sessions.Use(authorization.AuthorizationRequired)
 
 		api.GET("get-object-catalogue", getObjectCatalogueHandler)
 		api.GET("get-all-object-catalogue", getAllObjectCatalogueHandler)
 		sessions.PUT("update", updateSessionHandler)
 
 		api.Use(authorization.AdminAccessLevelRequired)
+		sessions.Use(authorization.AdminAccessLevelRequired)
 
 		api.POST("add-object-catologue", addObjectCatalogueHandler)
+		api.PUT("update-object-catalogue", updateObjectCatalogueHandler)
+		api.DELETE("delete-object-catalogue", deleteObjectCatalogueHandler)
+		sessions.DELETE("delete", deleteSessionHandler)
 	}
 
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -57,6 +62,7 @@ func indexHandler(c *gin.Context) {
 // @Success 201 {object} serverstatus.StatusJson
 // @Failure 400 {object} serverstatus.StatusJson
 // @Failure 401
+// @Failure 500 {object} serverstatus.StatusJson
 // @Router /api/add-object-catologue [post]
 func addObjectCatalogueHandler(c *gin.Context) {
 	obj, err := catalogueobject.Unmarshal(c.Request.Body)
@@ -72,7 +78,7 @@ func addObjectCatalogueHandler(c *gin.Context) {
 	err = obj.AddToDatabase()
 
 	if err != nil {
-		c.JSON(http.StatusBadRequest, serverstatus.StatusJson{
+		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
 			Message: err.Error(),
 		})
 
@@ -80,6 +86,82 @@ func addObjectCatalogueHandler(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, serverstatus.StatusJson{
+		Message: "Done.",
+	})
+}
+
+// @Summary Update Object Catalogue
+// @Security ApiKeyAuth
+// @Tags MainAPI
+// @Description Update a record of the object to the database.
+// @Accept json
+// @Produce json
+// @Param Input body catalogueobject.CatalogueObject true "Object info"
+// @Success 200 {object} serverstatus.StatusJson
+// @Failure 400 {object} serverstatus.StatusJson
+// @Failure 401
+// @Failure 500 {object} serverstatus.StatusJson
+// @Router /api/update-object-catologue [put]
+func updateObjectCatalogueHandler(c *gin.Context) {
+	obj, err := catalogueobject.Unmarshal(c.Request.Body)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	err = obj.Update()
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	c.JSON(http.StatusOK, serverstatus.StatusJson{
+		Message: "Done.",
+	})
+}
+
+// @Summary Delete Object Catalogue
+// @Security ApiKeyAuth
+// @Tags MainAPI
+// @Description Delete a record of the object to the database by name.
+// @Accept json
+// @Produce json
+// @Param Input body catalogueobject.CatalogueObjectJsonGet true "Object info"
+// @Success 200 {object} serverstatus.StatusJson
+// @Failure 400 {object} serverstatus.StatusJson
+// @Failure 401
+// @Failure 500 {object} serverstatus.StatusJson
+// @Router /api/delete-object-catologue [delete]
+func deleteObjectCatalogueHandler(c *gin.Context) {
+	obj, err := catalogueobject.UnmarshalJsonGet(c.Request.Body)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	err = catalogueobject.Delete(obj.Name)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	c.JSON(http.StatusOK, serverstatus.StatusJson{
 		Message: "Done.",
 	})
 }
@@ -293,6 +375,44 @@ func updateSessionHandler(c *gin.Context) {
 	} else {
 		err = obj.Update()
 	}
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	c.JSON(http.StatusOK, serverstatus.StatusJson{
+		Message: "Done.",
+	})
+}
+
+// @Summary Delete Session
+// @Security ApiKeyAuth
+// @Tags Sessions
+// @Description Delete the session data with the specified Id.
+// @Accept json
+// @Produce json
+// @Param Input body authorization.SessionJsonDelete true "Object info"
+// @Success 200 {object} serverstatus.StatusJson
+// @Failure 400 {object} serverstatus.StatusJson
+// @Failure 401
+// @Failure 500 {object} serverstatus.StatusJson
+// @Router /api/session/delete [delete]
+func deleteSessionHandler(c *gin.Context) {
+	obj, err := authorization.UnmarshalJsonDelete(c.Request.Body)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+
+		return
+	}
+
+	err = authorization.Delete(obj.Id)
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
